--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   flutter_webrtc: ^0.5.7
   shared_preferences: ^0.5.12+2
   logger: ^0.9.4
-  flutter_svg: ^0.19.0
+  flutter_svg: ^0.20.0-nullsafety.3
   pull_to_refresh: ^1.6.3
   dio: ^3.0.10
   flutter_secure_storage: ^3.3.5
@@ -44,10 +44,10 @@ dependencies:
   path_provider: ^1.6.24
   file_picker: ^2.0.12
   image_cropper: ^1.3.1
+  intl: ^0.15.7
   flutter_datetime_picker:
     git:
-      url: https://github.com/ditheshthegreat/flutter_datetime_picker # Repo
-      ref: patch-1 #
+      url: https://github.com/espresso3389/flutter_datetime_picker
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -55,7 +55,7 @@ dependencies:
 
 dev_dependencies:
   pedantic: ^1.9.2
-  flutter_launcher_icons: "^0.8.1"
+  #  flutter_launcher_icons: "^0.8.1"
   flutter_test:
     sdk: flutter
 
@@ -75,7 +75,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - .env
+    #  - .env
     - assets/
     - assets/icon/
     - assets/images/
