add .env to pubspec.yaml

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # ####################### Online #######################
 # SOCKETS_ADDRESS = https://sockets.boldo.penguin.software
 # SERVER_ADDRESS = https://api.boldo.penguin.software
-# KEYCLOAK_REALM_ADDRESS = https://sso-test.pti.org.py/auth/realms/iHub
+KEYCLOAK_REALM_ADDRESS = https://sso-test.pti.org.py/auth/realms/iHub
 
 # ###################### Android ######################
-SOCKETS_ADDRESS = http://34.225.20.53
-SERVER_ADDRESS = http://34.225.20.53
+SOCKETS_ADDRESS = http://34.225.20.53:8000/
+SERVER_ADDRESS = http://34.225.20.53:8008/
 # KEYCLOAK_REALM_ADDRESS = http://10.0.2.2:8080/auth/realms/iHub
 
 # ######################## iOs ########################
